--- a/.drone.yml
+++ b/.drone.yml
@@ -14,23 +14,23 @@ volumes:
     temp: {}
 
 steps:
-  # - name: publish
-  #   image: plugins/kaniko-ecr
-  #   settings:
-  #     create_repository: true
-  #     registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
-  #     repo: devprod-evergreen/${DRONE_REPO_NAME}
-  #     tags:
-  #       - git-${DRONE_COMMIT_SHA:0:7}
-  #       - latest
-  #     access_key:
-  #       from_secret: ecr_access_key
-  #     secret_key:
-  #       from_secret: ecr_secret_key
-  #   when:
-  #     event:
-  #       - promote
-  #       - push
+  - name: publish
+    image: plugins/kaniko-ecr
+    settings:
+      create_repository: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: devprod-evergreen/${DRONE_REPO_NAME}
+      tags:
+        - git-${DRONE_COMMIT_SHA:0:7}
+        - latest
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+    when:
+      event:
+        - promote
+        - push
 
   - name: generate-email-staging
     image: bitnami/kubectl
@@ -66,35 +66,36 @@ steps:
       target:
         - staging
 
-  # - name: deploy-staging
-  #   image: public.ecr.aws/kanopy/drone-helm:v3
-  #   settings:
-  #     chart: mongodb/web-app
-  #     chart_version: 4.31.0
-  #     add_repos: [mongodb=https://10gen.github.io/helm-charts]
-  #     namespace: devprod-evergreen
-  #     release: sage
-  #     values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.staging.corp.mongodb.com
-  #     values_files: ["environments/staging.yaml"]
-  #     api_server: https://api.staging.corp.mongodb.com
-  #     kubernetes_token:
-  #       from_secret: staging_kubernetes_token
-  #     wait_for_upgrade: true
-  #   volumes:
-  #     - name: shared
-  #       path: /shared
-  #   when:
-  #     event:
-  #       - promote
-  #     target:
-  #       - staging
+  - name: deploy-staging
+    image: public.ecr.aws/kanopy/drone-helm:v3
+    settings:
+      chart: mongodb/web-app
+      chart_version: 4.31.0
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: devprod-evergreen
+      release: sage
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.staging.corp.mongodb.com
+      values_files: ["environments/staging.yaml"]
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
+        from_secret: staging_kubernetes_token
+      wait_for_upgrade: true
+    volumes:
+      - name: shared
+        path: /shared
+    when:
+      event:
+        - promote
+      target:
+        - staging
 
   - name: send-email-staging-api
     image: alpine/curl:latest
     commands:
       - |
         EMAIL_BODY=$(cat /shared/deploy_email.html | tr -d '\n' | sed 's/"/\\"/g')
-        JSON_PAYLOAD="{\"recipients\": [\"mohamed.khelif@mongodb.com\"], \"subject\": \"Staging Deployment Notification\", \"body\": \"$EMAIL_BODY\", \"is_plain_text\": false}"
+        SUBJECT="$(date +'%Y-%m-%d') Sage deploy to ${DRONE_COMMIT_SHA:0:7}"
+        JSON_PAYLOAD="{\"recipients\": [\"mohamed.khelif@mongodb.com\"], \"subject\": \"$SUBJECT\", \"body\": \"$EMAIL_BODY\", \"is_plain_text\": false}"
         curl -X POST \
           'https://evergreen.mongodb.com/rest/v2/notifications/email' \
           -H "Api-User: $API_USER" \
