Fix dubious ownership

--- a/.drone.yml
+++ b/.drone.yml
@@ -35,24 +35,40 @@ steps:
   - name: generate-email-staging
     image: bitnami/kubectl
     commands:
-      - apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+      # git is already present in this image; keep this if you ever need to install extras:
+      # - apk add --no-cache git
       - git --version
-      # Drone runs in a container, so mark the source directory as safe
+
+      # fix "dubious ownership"
+      - git config --global --add safe.directory /drone/src
+
       - kubectl version --client
       - kubectl config set-cluster staging --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
       - kubectl config set-credentials staging --token="$KUBE_TOKEN"
       - kubectl config set-context staging --cluster=staging --user=staging --namespace=devprod-evergreen
       - kubectl config use-context staging
+
       - |
         PREV_COMMIT=$(kubectl get pods --selector=release=sage -n devprod-evergreen \
           -o jsonpath='{.items[*].metadata.labels}' 2>/dev/null | cut -d'}' -f1 | \
           grep -oE 'git-[0-9a-fA-F]+' | cut -d- -f2 | head -n1)
+
         if [ -n "$PREV_COMMIT" ]; then
+          # ensure the previous commit exists locally even in a shallow clone
+          git fetch --no-tags --depth=1 origin "$PREV_COMMIT" || true
+
           ./scripts/generate_deploy_email.sh "$PREV_COMMIT"
           cp temp/deploy_email.html /shared/deploy_email.html
         else
           echo "No previous commit found"
+          # generate a minimal placeholder email so downstream steps don't fail
+          mkdir -p temp
+          cat > temp/deploy_email.html <<'HTML'
+        <p>No previous commit found for staging deploy.</p>
+        HTML
+          cp temp/deploy_email.html /shared/deploy_email.html
         fi
+
     environment:
       KUBE_API_SERVER: https://api.staging.corp.mongodb.com
       KUBE_TOKEN:
