--- a/.drone.yml
+++ b/.drone.yml
@@ -40,7 +40,7 @@ steps:
       - git --version
 
       # fix "dubious ownership"
-      - git config --system --add safe.directory /drone/src
+      - git config --local --add safe.directory /drone/src
 
       - kubectl version --client
       - kubectl config set-cluster staging --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
