--- a/.drone.yml
+++ b/.drone.yml
@@ -35,59 +35,6 @@ steps:
         - promote
         - push
 
-  - name: generate-email-staging
-    image: bitnami/kubectl
-    commands:
-
-      - cd /drone/src
-      # git is already present in this image; keep this if you ever need to install extras:
-      # - apk add --no-cache git
-      - git --version
-      - ls -la
-
-      # fix "dubious ownership"
-      - git config --global --add safe.directory /drone/src
-
-      - kubectl version --client
-      - kubectl config set-cluster staging --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
-      - kubectl config set-credentials staging --token="$KUBE_TOKEN"
-      - kubectl config set-context staging --cluster=staging --user=staging --namespace=devprod-evergreen
-      - kubectl config use-context staging
-
-      - |
-        PREV_COMMIT=$(kubectl get pods --selector=release=sage -n devprod-evergreen \
-          -o jsonpath='{.items[*].metadata.labels}' 2>/dev/null | cut -d'}' -f1 | \
-          grep -oE 'git-[0-9a-fA-F]+' | cut -d- -f2 | head -n1)
-
-        if [ -n "$PREV_COMMIT" ]; then
-          # ensure the previous commit exists locally even in a shallow clone
-          git fetch --no-tags --depth=1 origin "$PREV_COMMIT" || true
-
-          ./scripts/generate_deploy_email.sh "$PREV_COMMIT"
-          cp temp/deploy_email.html /shared/deploy_email.html
-        else
-          echo "No previous commit found"
-          # generate a minimal placeholder email so downstream steps don't fail
-          mkdir -p temp
-          cat > temp/deploy_email.html <<'HTML'
-        <p>No previous commit found for staging deploy.</p>
-        HTML
-          cp temp/deploy_email.html /shared/deploy_email.html
-        fi
-
-    environment:
-      KUBE_API_SERVER: https://api.staging.corp.mongodb.com
-      KUBE_TOKEN:
-        from_secret: staging_kubernetes_token
-    volumes:
-      - name: shared
-        path: /shared
-    when:
-      event:
-        - promote
-      target:
-        - staging
-
   - name: deploy-staging
     image: public.ecr.aws/kanopy/drone-helm:v3
     settings:
@@ -102,16 +49,55 @@ steps:
       kubernetes_token:
         from_secret: staging_kubernetes_token
       wait_for_upgrade: true
-    volumes:
-      - name: shared
-        path: /shared
     when:
       event:
         - promote
       target:
         - staging
 
-  - name: send-email-staging-api
+  - name: generate-email-prod
+    image: bitnami/kubectl:latest
+    commands:
+      - cd /drone/src
+      - git --version
+      - git config --global --add safe.directory /drone/src
+      - kubectl version --client
+      - kubectl config set-cluster prod --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
+      - kubectl config set-credentials prod --token="$KUBE_TOKEN"
+      - kubectl config set-context prod --cluster=prod --user=prod --namespace=devprod-evergreen
+      - kubectl config use-context prod
+      - |
+        PREV_COMMIT=$(kubectl get pods --selector=release=sage -n devprod-evergreen \
+          -o jsonpath='{.items[*].metadata.labels}' 2>/dev/null | cut -d'}' -f1 | \
+          grep -oE 'git-[0-9a-fA-F]+' | cut -d- -f2 | head -n1)
+        if [ -n "$PREV_COMMIT" ]; then
+          git fetch --no-tags --depth=1 origin "$PREV_COMMIT" || true
+          ./scripts/generate_deploy_email.sh "$PREV_COMMIT"
+          cp temp/deploy_email.html /shared/deploy_email.html
+        else
+          echo "No previous commit found"
+          mkdir -p temp
+          cat > temp/deploy_email.html <<'HTML'
+        <p>No previous commit found for production deploy.</p>
+        HTML
+          cp temp/deploy_email.html /shared/deploy_email.html
+        fi
+    environment:
+      KUBE_API_SERVER: https://api.prod.corp.mongodb.com
+      KUBE_TOKEN:
+        from_secret: prod_kubernetes_token
+    volumes:
+      - name: shared
+        path: /shared
+    when:
+      branch:
+        - main
+      event:
+        - promote
+      target:
+        - production
+
+  - name: send-email-prod-api
     image: alpine/curl:latest
     commands:
       - apk add --no-cache jq
@@ -119,7 +105,7 @@ steps:
         EMAIL_BODY=$(cat /shared/deploy_email.html | tr -d '\n')
         SUBJECT="$(date +'%Y-%m-%d') Sage deploy to ${DRONE_COMMIT_SHA:0:7}"
         jq -n \
-          --arg recipients "mohamed.khelif@mongodb.com" \
+          --arg recipients "evergreen-deploys@10gen.com" \
           --arg subject "$SUBJECT" \
           --arg body "$EMAIL_BODY" \
           '{recipients: [$recipients], subject: $subject, body: $body, is_plain_text: false}' | \
@@ -134,37 +120,6 @@ steps:
         from_secret: evergreen_api_user
       API_KEY:
         from_secret: evergreen_api_key
-    volumes:
-      - name: shared
-        path: /shared
-    when:
-      event:
-        - promote
-      target:
-        - staging
-
-  - name: generate-email-prod
-    image: bitnami/kubectl:latest
-    commands:
-      - kubectl config set-cluster prod --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
-      - kubectl config set-credentials prod --token="$KUBE_TOKEN"
-      - kubectl config set-context prod --cluster=prod --user=prod --namespace=devprod-evergreen
-      - kubectl config use-context prod
-      - apk add --no-cache git
-      - |
-        PREV_COMMIT=$(kubectl get pods --selector=release=sage -n devprod-evergreen \
-          -o jsonpath='{.items[*].metadata.labels}' 2>/dev/null | cut -d'}' -f1 | \
-          grep -oE 'git-[0-9a-fA-F]+' | cut -d- -f2 | head -n1)
-        if [ -n "$PREV_COMMIT" ]; then
-          ./scripts/generate_deploy_email.sh "$PREV_COMMIT"
-          cp temp/deploy_email.html /shared/deploy_email.html
-        else
-          echo "No previous commit found"
-        fi
-    environment:
-      KUBE_API_SERVER: https://api.prod.corp.mongodb.com
-      KUBE_TOKEN:
-        from_secret: prod_kubernetes_token
     volumes:
       - name: shared
         path: /shared
@@ -190,9 +145,6 @@ steps:
       kubernetes_token:
         from_secret: prod_kubernetes_token
       wait_for_upgrade: true
-    volumes:
-      - name: shared
-        path: /shared
     when:
       branch:
         - main
