--- a/.drone.yml
+++ b/.drone.yml
@@ -97,6 +97,28 @@ steps:
       event:
         - promote
       target:
+        - staging
+
+  - name: deploy-prod
+    image: public.ecr.aws/kanopy/drone-helm:v3
+    settings:
+      chart: mongodb/web-app
+      chart_version: 4.31.0
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: devprod-evergreen
+      release: sage
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.prod.corp.mongodb.com
+      values_files: ["environments/prod.yaml"]
+      api_server: https://api.prod.corp.mongodb.com
+      kubernetes_token:
+        from_secret: prod_kubernetes_token
+      wait_for_upgrade: true
+    when:
+      branch:
+        - main
+      event:
+        - promote
+      target:
         - production
 
   - name: send-email-prod-api
@@ -131,26 +153,4 @@ steps:
       event:
         - promote
       target:
-        - production
-
-  - name: deploy-prod
-    image: public.ecr.aws/kanopy/drone-helm:v3
-    settings:
-      chart: mongodb/web-app
-      chart_version: 4.31.0
-      add_repos: [mongodb=https://10gen.github.io/helm-charts]
-      namespace: devprod-evergreen
-      release: sage
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.prod.corp.mongodb.com
-      values_files: ["environments/prod.yaml"]
-      api_server: https://api.prod.corp.mongodb.com
-      kubernetes_token:
-        from_secret: prod_kubernetes_token
-      wait_for_upgrade: true
-    when:
-      branch:
-        - main
-      event:
-        - promote
-      target:
-        - production
+        - staging
