DEVPROD-21876 Generate deploy email for deploys (#130)

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,12 +2,19 @@
 kind: pipeline
 name: default
 
+clone:
+  depth: 50
+
 platform:
-  arch: "amd64"
+  arch: amd64
 
 trigger:
   branch:
     - main
+
+volumes:
+  - name: shared
+    temp: {}
 
 steps:
   - name: publish
@@ -28,6 +35,50 @@ steps:
         - promote
         - push
 
+  - name: generate-email-prod
+    image: bitnami/kubectl:latest
+    commands:
+      - cd /drone/src
+      - git --version
+
+      - kubectl version --client
+      - kubectl config set-cluster prod --server="$KUBE_API_SERVER" --insecure-skip-tls-verify=true
+      - kubectl config set-credentials prod --token="$KUBE_TOKEN"
+      - kubectl config set-context prod --cluster=prod --user=prod --namespace=devprod-evergreen
+      - kubectl config use-context prod
+      - |
+        PREV_COMMIT=$(kubectl get pods \
+          --selector=release=sage \
+          -n devprod-evergreen \
+          -o jsonpath='{.items[*].metadata.labels.app\.kubernetes\.io/version}' \
+        2>/dev/null | grep -oE 'git-[0-9a-fA-F]+' | cut -d- -f2)
+        if [ -n "$PREV_COMMIT" ]; then
+          git fetch --no-tags --depth=1 origin "$PREV_COMMIT" || true
+          ./scripts/generate_deploy_email.sh "$PREV_COMMIT"
+          cp temp/deploy_email.html /shared/deploy_email.html
+        else
+          echo "No previous commit found"
+          mkdir -p temp
+          cat > temp/deploy_email.html <<'HTML'
+        <p>No previous commit found for production deploy.</p>
+        HTML
+          cp temp/deploy_email.html /shared/deploy_email.html
+        fi
+    environment:
+      KUBE_API_SERVER: https://api.prod.corp.mongodb.com
+      KUBE_TOKEN:
+        from_secret: prod_kubernetes_token
+    volumes:
+      - name: shared
+        path: /shared
+    when:
+      branch:
+        - main
+      event:
+        - promote
+      target:
+        - production
+  
   - name: deploy-staging
     image: public.ecr.aws/kanopy/drone-helm:v3
     settings:
@@ -37,7 +88,7 @@ steps:
       namespace: devprod-evergreen
       release: sage
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.staging.corp.mongodb.com
-      values_files: [ "environments/staging.yaml" ]
+      values_files: ["environments/staging.yaml"]
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
@@ -57,11 +108,45 @@ steps:
       namespace: devprod-evergreen
       release: sage
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devprod-evergreen/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=sage.devprod-evergreen.prod.corp.mongodb.com
-      values_files: [ "environments/prod.yaml" ]
+      values_files: ["environments/prod.yaml"]
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
       wait_for_upgrade: true
+    when:
+      branch:
+        - main
+      event:
+        - promote
+      target:
+        - production
+
+  - name: send-email-prod-api
+    image: alpine/curl:latest
+    commands:
+      - apk add --no-cache jq
+      - |
+        EMAIL_BODY=$(cat /shared/deploy_email.html | tr '\n' ' ')
+        SUBJECT="$(date +'%Y-%m-%d') Sage deploy to ${DRONE_COMMIT_SHA:0:7}"
+        jq -n \
+          --arg recipients "evergreen-deploys@10gen.com" \
+          --arg subject "$SUBJECT" \
+          --arg body "$EMAIL_BODY" \
+          '{recipients: [$recipients], subject: $subject, body: $body, is_plain_text: false}' | \
+        curl -X POST \
+          'https://evergreen.mongodb.com/rest/v2/notifications/email' \
+          -H "Api-User: $API_USER" \
+          -H "Api-Key: $API_KEY" \
+          -H "Content-Type: application/json" \
+          --data @-
+    environment:
+      API_USER:
+        from_secret: evergreen_api_user
+      API_KEY:
+        from_secret: evergreen_api_key
+    volumes:
+      - name: shared
+        path: /shared
     when:
       branch:
         - main
