--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,7 +11,7 @@ metadata:
       icon: github
 spec:
   type: service
-  owner: group:default/oktagroup_63a4baf4355dd783744f0b8d  # 10gen-evergreen-ui okta group
+  owner: group:default/10genevergreenui
   lifecycle: production
   system: evergreen
   consumesApis:
