CORPSEC-29592: Address a few Kanopy scorecard items
Per https://jira.mongodb.org/browse/CORPSEC-29592, we should address Kanopy scorecard indications. For [prod and staging](https://scorecard.devops.prod.corp.mongodb.com/?namespace=devprod-evergreen&selected=sage-web-app), a few of these are to add documentation to our helm charts ([owner/DRI](https://kanopy.corp.mongodb.com/docs/security/scorecard/#ownership-dri-email), [data classification](https://kanopy.corp.mongodb.com/docs/security/scorecard/#data-classification), [data designation](https://kanopy.corp.mongodb.com/docs/security/scorecard/#data-designation))

--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -62,3 +62,10 @@ autoscaling:
         target:
           type: Utilization
           averageUtilization: 80
+
+security:  # Most sensitive info is logs and task metadata.
+  dataClassification: "Internal"
+  dataDesignation: ["MI"]
+
+ownership:
+  driEmail: evergreen-team@mongodb.com
