--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "typecheck": "yarn tsc",
     "test-thinking-agent": "vite-node src/mastra/tests/scripts/test-thinking-agent.ts",
     "chat-with-staging": "vite-node src/mastra/tests/scripts/chat-with-staging.ts",
-    "mastra:dev": "mastra dev -p 4111",
+    "mastra:dev": "mastra dev",
     "mastra:build": "mastra build",
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
@@ -41,12 +41,13 @@
     "@ai-sdk/azure": "^2.0.54",
     "@ai-sdk/openai": "^2.0.26",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/core": "^0.17.1",
-    "@mastra/libsql": "^0.14.2",
-    "@mastra/loggers": "^0.10.12",
-    "@mastra/memory": "^0.15.2",
-    "@mastra/mongodb": "^0.14.1",
-    "@mastra/rag": "^1.2.5",
+    "@mastra/braintrust": "^0.1.7",
+    "@mastra/core": "^0.21.1",
+    "@mastra/libsql": "^0.15.2",
+    "@mastra/loggers": "^0.10.16",
+    "@mastra/memory": "^0.15.7",
+    "@mastra/mongodb": "^0.14.5",
+    "@mastra/rag": "^1.3.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.65.0",
     "@opentelemetry/core": "^2.1.0",
@@ -57,7 +58,7 @@
     "@sentry/node": "^10.10.0",
     "@sentry/profiling-node": "^10.11.0",
     "ai": "^5.0.76",
-    "braintrust": "^0.3.8",
+    "braintrust": "^0.4.6",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
@@ -71,7 +72,7 @@
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
-    "zod": "^3.25.76"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
@@ -100,7 +101,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^0.13.1",
+    "mastra": "^0.17.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
