--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@opentelemetry/sdk-node": "^0.206.0",
     "@opentelemetry/sdk-trace-base": "^2.1.0",
     "@opentelemetry/winston-transport": "^0.17.0",
-    "@sentry/node": "^10.10.0",
-    "@sentry/profiling-node": "^10.11.0",
+    "@sentry/node": "10.11.0",
+    "@sentry/profiling-node": "10.11.0",
     "ai": "^5.0.76",
     "braintrust": "^0.4.6",
     "cors": "^2.8.5",
