--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -40,6 +40,9 @@ env:
   OTEL_LOG_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/logs
   PORT: 8080
   SENTRY_DSN: https://3db76f0989faad4c102a8708fba9446f@o4504991346720768.ingest.us.sentry.io/4509905876942849
+  SENTRY_ENABLED: true
+  SENTRY_CAPTURE_CONSOLE: true
+  SENTRY_ENVIRONMENT: production
 
 envSecrets:
   AZURE_OPENAI_API_KEY: parsley-ai-secrets
