--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "build": "yarn typecheck && vite build",
     "start": "NODE_ENV=production node dist/main.js",
-    "dev": "NODE_ENV=development yarn dev-run",
+    "dev": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=development yarn dev-run",
     "dev-run": "vite-node --watch src/main.ts",
-    "dev:staging": "NODE_ENV=staging dotenv-flow yarn dev-run",
-    "dev:prod": "NODE_ENV=production dotenv-flow yarn dev-run",
+    "dev:staging": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=staging dotenv-flow yarn dev-run",
+    "dev:prod": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=production dotenv-flow yarn dev-run",
     "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
     "pending-commits": "bash scripts/check-pending-commits.sh",
     "pending-commits:json": "bash scripts/check-pending-commits.sh --json",
