DEVPROD-23463 Fix Sentry integration (#155)

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "build": "yarn typecheck && vite build",
     "start": "NODE_ENV=production node dist/main.js",
-    "dev": "NODE_ENV=development yarn dev-run",
+    "dev": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=development yarn dev-run",
     "dev-run": "vite-node --watch src/main.ts",
-    "dev:staging": "NODE_ENV=staging dotenv-flow yarn dev-run",
-    "dev:prod": "NODE_ENV=production dotenv-flow yarn dev-run",
+    "dev:staging": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=staging dotenv-flow yarn dev-run",
+    "dev:prod": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=production dotenv-flow yarn dev-run",
     "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
     "pending-commits": "bash scripts/check-pending-commits.sh",
     "pending-commits:json": "bash scripts/check-pending-commits.sh --json",
@@ -35,8 +35,8 @@
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
-    "eval": "ENABLE_SENTRY_PROFILING=false npx braintrust eval --no-send-logs",
-    "eval:send_to_braintrust": "ENABLE_SENTRY_PROFILING=false npx braintrust eval --no-progress-bars",
+    "eval": "npx braintrust eval --no-send-logs",
+    "eval:send_to_braintrust": "npx braintrust eval --no-progress-bars",
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
@@ -57,8 +57,7 @@
     "@opentelemetry/sdk-node": "^0.206.0",
     "@opentelemetry/sdk-trace-base": "^2.1.0",
     "@opentelemetry/winston-transport": "^0.17.0",
-    "@sentry/node": "^10.10.0",
-    "@sentry/profiling-node": "^10.11.0",
+    "@sentry/node": "10.22.0",
     "ai": "^5.0.76",
     "braintrust": "^0.4.6",
     "cors": "^2.8.5",
