--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^2.0.54",
-    "@ai-sdk/openai": "^2.0.26",
+    "@ai-sdk/azure": "^2.0.58",
+    "@ai-sdk/openai": "^2.0.57",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/braintrust": "^0.1.7",
-    "@mastra/core": "^0.21.1",
-    "@mastra/libsql": "^0.15.2",
-    "@mastra/loggers": "^0.10.16",
-    "@mastra/memory": "^0.15.7",
-    "@mastra/mongodb": "^0.14.5",
-    "@mastra/rag": "^1.3.1",
+    "@mastra/ai-sdk": "^0.2.5",
+    "@mastra/braintrust": "^0.2.2",
+    "@mastra/core": "^0.23.2",
+    "@mastra/libsql": "^0.16.1",
+    "@mastra/loggers": "^0.10.18",
+    "@mastra/memory": "^0.15.10",
+    "@mastra/mongodb": "^0.14.8",
+    "@mastra/rag": "^1.3.3",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.65.0",
     "@opentelemetry/core": "^2.1.0",
@@ -58,8 +59,8 @@
     "@opentelemetry/sdk-trace-base": "^2.1.0",
     "@opentelemetry/winston-transport": "^0.17.0",
     "@sentry/node": "10.22.0",
-    "ai": "^5.0.76",
-    "braintrust": "^0.4.6",
+    "ai": "^5.0.82",
+    "braintrust": "^0.4.8",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
