--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
-    "eval": "npx braintrust eval --no-send-logs",
-    "eval:send_to_braintrust": "npx braintrust eval --no-progress-bars",
+    "eval": "BRAINTRUST_EVAL=true npx braintrust eval --no-send-logs",
+    "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --no-progress-bars",
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
