--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,7 +11,7 @@ metadata:
       icon: github
 spec:
   type: service
-  owner: group:default/10gen-evergreen-ui
+  owner: group:10gen-evergreen-ui
   lifecycle: production
   system: evergreen
   consumesApis:
