--- a/package.json
+++ b/package.json
@@ -35,21 +35,22 @@
     "mastra:start": "node --import=./.mastra/output/instrumentation.mjs .mastra/output/index.mjs",
     "mastra:full": "yarn mastra:build && yarn mastra:start",
     "prepare": "husky",
-    "eval": "npx braintrust eval --no-send-logs",
-    "eval:send_to_braintrust": "npx braintrust eval --no-progress-bars",
+    "eval": "BRAINTRUST_EVAL=true npx braintrust eval --no-send-logs",
+    "eval:send_to_braintrust": "BRAINTRUST_EVAL=true npx braintrust eval --no-progress-bars",
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^2.0.54",
-    "@ai-sdk/openai": "^2.0.26",
+    "@ai-sdk/azure": "^2.0.58",
+    "@ai-sdk/openai": "^2.0.57",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/braintrust": "^0.1.7",
-    "@mastra/core": "^0.21.1",
-    "@mastra/libsql": "^0.15.2",
-    "@mastra/loggers": "^0.10.16",
-    "@mastra/memory": "^0.15.7",
-    "@mastra/mongodb": "^0.14.5",
-    "@mastra/rag": "^1.3.1",
+    "@mastra/ai-sdk": "^0.2.6",
+    "@mastra/braintrust": "^0.2.3",
+    "@mastra/core": "^0.24.0",
+    "@mastra/libsql": "^0.16.2",
+    "@mastra/loggers": "^0.10.19",
+    "@mastra/memory": "^0.15.11",
+    "@mastra/mongodb": "^0.14.9",
+    "@mastra/rag": "^1.3.4",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.65.0",
     "@opentelemetry/core": "^2.1.0",
@@ -60,8 +61,8 @@
     "@opentelemetry/semantic-conventions": "^1.37.0",
     "@opentelemetry/winston-transport": "^0.17.0",
     "@sentry/node": "10.22.0",
-    "ai": "^5.0.76",
-    "braintrust": "^0.4.6",
+    "ai": "^5.0.82",
+    "braintrust": "^0.4.9",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
@@ -104,7 +105,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^0.17.0",
+    "mastra": "^0.18.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
