Add test script for Kubernetes secrets and update dependencies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "run-analyzer": "vite-node src/mastra/tests/scripts/run-log-analyzer.ts",
     "typecheck": "yarn tsc",
     "test-thinking-agent": "vite-node src/mastra/tests/scripts/test-thinking-agent.ts",
+    "test-k8s-secrets": "vite-node src/mastra/tests/scripts/test-k8s-secrets.ts",
     "chat-with-staging": "vite-node src/mastra/tests/scripts/chat-with-staging.ts",
     "mastra:dev": "mastra dev",
     "mastra:build": "mastra build",
@@ -73,6 +74,7 @@
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "mongodb": "^6.18.0",
+    "@kubernetes/client-node": "^0.21.0",
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
