--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: sage
+  Title: Sage
   description: Server powering the Evergreen AI Service.
   annotations:
     evergreen/project-id: 686d2f07ef37320007ad2596
