--- a/package.json
+++ b/package.json
@@ -40,17 +40,19 @@
     "load-dataset-into-braintrust": "vite-node src/evals/scripts/braintrust-dataset-loader.ts"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^2.0.67",
-    "@ai-sdk/openai": "^2.0.57",
+    "@ai-sdk/azure": "^2.0.70",
+    "@ai-sdk/openai": "^2.0.68",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^0.2.6",
-    "@mastra/braintrust": "^0.2.3",
-    "@mastra/core": "^0.24.0",
+    "@mastra/ai-sdk": "^0.2.7",
+    "@mastra/braintrust": "^1.0.0-beta.0",
+    "@mastra/core": "^1.0.0-beta.2",
     "@mastra/libsql": "^0.16.2",
-    "@mastra/loggers": "^0.10.19",
-    "@mastra/memory": "^0.15.11",
-    "@mastra/mongodb": "^0.14.9",
+    "@mastra/loggers": "^1.0.0-beta.0",
+    "@mastra/memory": "^1.0.0-beta.0",
+    "@mastra/mongodb": "^1.0.0-beta.0",
+    "@mastra/observability": "^1.0.0-beta.0",
     "@mastra/rag": "^1.3.4",
+    "@mastra/server": "^1.0.0-beta.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.0",
     "@opentelemetry/core": "^2.2.0",
@@ -105,7 +107,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^0.18.0",
+    "mastra": "^1.0.0-beta.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
