set env defaults

--- a/.env.defaults
+++ b/.env.defaults
@@ -16,3 +16,14 @@ LOG_LEVEL=debug
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_ENDPOINT=
 OTEL_COLLECTOR_URL=
+
+# Sentry Error Tracking
+# Set SENTRY_ENABLED=true and provide a DSN to enable error tracking
+SENTRY_ENABLED=false
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=development
+SENTRY_SAMPLE_RATE=1.0
+SENTRY_TRACES_SAMPLE_RATE=1.0
+SENTRY_DEBUG=false
+SENTRY_ATTACH_STACKTRACE=true
+SENTRY_CAPTURE_CONSOLE=false
