--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
     "@ai-sdk/azure": "^2.0.70",
     "@ai-sdk/openai": "^2.0.68",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^0.2.7",
+    "@mastra/ai-sdk": "^1.0.0-beta.3",
     "@mastra/braintrust": "^1.0.0-beta.1",
-    "@mastra/core": "^1.0.0-beta.2",
+    "@mastra/core": "^1.0.0-beta.4",
     "@mastra/libsql": "^0.16.2",
-    "@mastra/loggers": "^1.0.0-beta.0",
-    "@mastra/memory": "^1.0.0-beta.0",
-    "@mastra/mongodb": "^1.0.0-beta.0",
-    "@mastra/observability": "^1.0.0-beta.0",
-    "@mastra/rag": "^1.3.4",
-    "@mastra/server": "^1.0.0-beta.2",
+    "@mastra/loggers": "^1.0.0-beta.1",
+    "@mastra/memory": "^1.0.0-beta.1",
+    "@mastra/mongodb": "^1.0.0-beta.1",
+    "@mastra/observability": "^1.0.0-beta.1",
+    "@mastra/rag": "^2.0.0-beta.1",
+    "@mastra/server": "^1.0.0-beta.4",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.0",
     "@opentelemetry/core": "^2.2.0",
