--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
-    "build": "VERSION=${VERSION:-$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown')} yarn typecheck && vite build",
+    "build": "yarn typecheck && vite build",
     "start": "NODE_ENV=production node dist/main.js",
     "dev": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=development yarn dev-run",
     "dev-run": "vite-node --watch src/main.ts",
