--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@mastra/ai-sdk": "^1.0.0-beta.3",
     "@mastra/braintrust": "^1.0.0-beta.1",
     "@mastra/core": "^1.0.0-beta.4",
-    "@mastra/libsql": "^0.16.2",
+    "@mastra/libsql": "^1.0.0-beta.1",
     "@mastra/loggers": "^1.0.0-beta.1",
     "@mastra/memory": "^1.0.0-beta.1",
     "@mastra/mongodb": "^1.0.0-beta.1",
@@ -107,7 +107,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^1.0.0-beta.1",
+    "mastra": "^1.0.0-beta.3",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
