Undo changes to env files

--- a/.env.staging
+++ b/.env.staging
@@ -1,7 +1,7 @@
 # Evergreen
-EVERGREEN_API_URL=https://evergreen-staging.corp.mongodb.com/rest/v2
-EVERGREEN_GRAPHQL_ENDPOINT=https://evergreen-staging.corp.mongodb.com/mcp/graphql/query
-EVERGREEN_URL=https://evergreen-staging.corp.mongodb.com
+EVERGREEN_API_URL=https://evergreen.mongodb.com/rest/v2
+EVERGREEN_GRAPHQL_ENDPOINT=https://evergreen.mongodb.com/mcp/graphql/query
+EVERGREEN_URL=https://evergreen.mongodb.com
 
 # Observability
 OTEL_COLLECTOR_URL=http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
