--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -31,9 +31,9 @@ env:
   BRAINTRUST_PROJECT_NAME: sage-staging
   DB_NAME: sage
   EVERGREEN_API_USER: sage
-  EVERGREEN_API_URL: https://evergreen-staging.corp.mongodb.com/rest/v2
-  EVERGREEN_URL: https://evergreen-staging.corp.mongodb.com
-  EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen-staging.corp.mongodb.com/mcp/graphql/query
+  EVERGREEN_API_URL: https://evergreen.mongodb.com/rest/v2
+  EVERGREEN_URL: https://evergreen.mongodb.com
+  EVERGREEN_GRAPHQL_ENDPOINT: https://evergreen.mongodb.com/mcp/graphql/query
   NODE_ENV: staging
   OTEL_COLLECTOR_URL: http://otel-collector-web-app.devprod-platform.svc.cluster.local:4318/v1/traces
   OTEL_EXPORTER_OTLP_ENDPOINT: https://api.braintrust.dev/otel
