--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@ai-sdk/azure": "^2.0.73",
     "@ai-sdk/openai": "^2.0.57",
+    "@ai-sdk/openai-compatible": "^1.0.22",
     "@ai-sdk/provider": "^2.0.0",
     "@mastra/ai-sdk": "^0.2.6",
     "@mastra/braintrust": "^0.2.3",
