implement braintrust eval for releaseNotesAgent and add product input for future implementation of release notes context per-product

--- a/package.json
+++ b/package.json
@@ -121,6 +121,9 @@
   "engines": {
     "node": ">=22.0.0"
   },
+  "resolutions": {
+    "@ai-sdk/provider-utils": "^3.0.17"
+  },
   "author": "",
   "license": "ISC"
 }
