--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@sentry/node": "10.22.0",
     "@sentry/vite-plugin": "^4.6.0",
     "ai": "^5.0.101",
-    "braintrust": "^1.0.1",
+    "braintrust": "0.4.9",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.18.2",
