--- a/package.json
+++ b/package.json
@@ -43,16 +43,15 @@
     "@ai-sdk/azure": "^2.0.73",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^1.0.0-beta.7",
-    "@mastra/braintrust": "^1.0.0-beta.5",
-    "@mastra/core": "^1.0.0-beta.10",
-    "@mastra/libsql": "^1.0.0-beta.7",
-    "@mastra/loggers": "^1.0.0-beta.3",
-    "@mastra/memory": "^1.0.0-beta.4",
-    "@mastra/mongodb": "^1.0.0-beta.6",
-    "@mastra/observability": "^1.0.0-beta.4",
-    "@mastra/rag": "^2.0.0-beta.3",
-    "@mastra/server": "^1.0.0-beta.10",
+    "@mastra/ai-sdk": "1.0.0-beta.7",
+    "@mastra/braintrust": "1.0.0-beta.5",
+    "@mastra/core": "1.0.0-beta.5",
+    "@mastra/loggers": "1.0.0-beta.3",
+    "@mastra/memory": "1.0.0-beta.4",
+    "@mastra/mongodb": "1.0.0-beta.6",
+    "@mastra/observability": "1.0.0-beta.4",
+    "@mastra/rag": "2.0.0-beta.3",
+    "@mastra/server": "1.0.0-beta.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.0",
     "@opentelemetry/core": "^2.2.0",
