--- a/package.json
+++ b/package.json
@@ -43,15 +43,15 @@
     "@ai-sdk/azure": "^2.0.73",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "1.0.0-beta.7",
-    "@mastra/braintrust": "1.0.0-beta.5",
-    "@mastra/core": "1.0.0-beta.5",
-    "@mastra/loggers": "1.0.0-beta.3",
-    "@mastra/memory": "1.0.0-beta.4",
-    "@mastra/mongodb": "1.0.0-beta.6",
-    "@mastra/observability": "1.0.0-beta.4",
-    "@mastra/rag": "2.0.0-beta.3",
-    "@mastra/server": "1.0.0-beta.10",
+    "@mastra/ai-sdk": "^1.0.0-beta.8",
+    "@mastra/braintrust": "^1.0.0-beta.5",
+    "@mastra/core": "^1.0.0-beta.11",
+    "@mastra/loggers": "^1.0.0-beta.3",
+    "@mastra/memory": "^1.0.0-beta.4",
+    "@mastra/mongodb": "^1.0.0-beta.6",
+    "@mastra/observability": "^1.0.0-beta.4",
+    "@mastra/rag": "^2.0.0-beta.3",
+    "@mastra/server": "^1.0.0-beta.11",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.0",
     "@opentelemetry/core": "^2.2.0",
@@ -78,6 +78,7 @@
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
+    "yarn": "^1.22.22",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -107,7 +108,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^1.0.0-beta.8",
+    "mastra": "^1.0.0-beta.9",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
