--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev-run": "vite-node --watch src/main.ts",
     "dev:staging": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=staging dotenv-flow yarn dev-run",
     "dev:prod": "VERSION=$(git rev-parse --short HEAD 2>/dev/null || echo 'unknown') NODE_ENV=production dotenv-flow yarn dev-run",
+    "poll-jira": "vite-node src/services/jira/pollJiraTicketsJob.ts",
+    "poll-jira:staging": "NODE_ENV=staging dotenv-flow yarn poll-jira",
+    "poll-jira:prod": "NODE_ENV=production dotenv-flow yarn poll-jira",
     "deploy:staging": "NODE_ENV=staging dotenv-flow -- sh scripts/deploy.sh",
     "pending-commits": "bash scripts/check-pending-commits.sh",
     "pending-commits:json": "bash scripts/check-pending-commits.sh --json",
