--- a/package.json
+++ b/package.json
@@ -41,16 +41,17 @@
   },
   "dependencies": {
     "@ai-sdk/azure": "^2.0.89",
-    "@ai-sdk/openai": "^2.0.57",
+    "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/provider": "^2.0.0",
-    "@mastra/ai-sdk": "^0.2.6",
-    "@mastra/braintrust": "^0.2.3",
-    "@mastra/core": "^0.24.0",
-    "@mastra/libsql": "^0.16.2",
-    "@mastra/loggers": "^0.10.19",
-    "@mastra/memory": "^0.15.11",
-    "@mastra/mongodb": "^0.14.9",
-    "@mastra/rag": "^1.3.4",
+    "@mastra/ai-sdk": "^1.0.0-beta.9",
+    "@mastra/braintrust": "^1.0.0-beta.6",
+    "@mastra/core": "^1.0.0-beta.13",
+    "@mastra/loggers": "^1.0.0-beta.3",
+    "@mastra/memory": "^1.0.0-beta.5",
+    "@mastra/mongodb": "^1.0.0-beta.7",
+    "@mastra/observability": "^1.0.0-beta.5",
+    "@mastra/rag": "^2.0.0-beta.3",
+    "@mastra/server": "^1.0.0-beta.13",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.2",
     "@opentelemetry/core": "^2.2.0",
@@ -77,6 +78,7 @@
     "query-string": "^9.3.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
+    "yarn": "^1.22.22",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -106,7 +108,7 @@
     "husky": "^9.1.7",
     "junit-report-builder": "^5.1.1",
     "lint-staged": "^16.2.3",
-    "mastra": "^0.18.0",
+    "mastra": "^1.0.0-beta.9",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
