--- a/.env.defaults
+++ b/.env.defaults
@@ -13,8 +13,8 @@ DB_NAME=sage
 LOG_LEVEL=debug
 
 # Secrets
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_API_KEY=your_azure_open_api_key
+AZURE_OPENAI_ENDPOINT=azure_open_ai_endpoint
 OTEL_COLLECTOR_URL=
 
 # Encryption
