Add required vars and call validateConfig in poller.

--- a/.env.defaults
+++ b/.env.defaults
@@ -17,6 +17,15 @@ AZURE_OPENAI_API_KEY=your_azure_open_api_key
 AZURE_OPENAI_ENDPOINT=azure_open_ai_endpoint
 OTEL_COLLECTOR_URL=
 
+# JIRA Config
+JIRA_API_TOKEN=your_jira_token
+JIRA_BASE_URL="https://jira.mongodb.org"
+
+SENTRY_ENABLED=false
+
+# Sage Bot Config
+SAGE_BOT_SUPPORTED_PROJECTS=DEVPROD,CLOUDP,AMP,DOCSP
+
 # Encryption
 # ENCRYPTION_KEY: 32-byte hex string (64 characters) for AES-256 encryption
 # Generate with: openssl rand -hex 32
