revert test changes.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "pending-commits:json": "bash scripts/check-pending-commits.sh --json",
     "clean": "rm -rf dist bin node_modules",
     "codegen": "graphql-codegen-esm --config graphql.config.ts",
-    "e2e": "vitest --include 'src/e2e/**/*.test.ts'",
-    "test": "vitest",
+    "e2e": "vitest --project e2e",
+    "test": "vitest --project unit",
     "test:ui": "yarn test --ui",
     "test:run": "yarn test run",
     "test:coverage": "yarn test --coverage",
