--- a/environments/cronjobs/staging_deployments.yml
+++ b/environments/cronjobs/staging_deployments.yml
@@ -1,9 +1,16 @@
-# Staging cronjob configuration (merged with common.yaml and cronjobs/common.yaml)
-# Only contains staging-specific overrides
+# Staging cronjob configuration
 
 cronjobs:
   - name: jira-polling
+    schedule: '* * * * *' # Run every minute
     command: ['yarn', 'poll-jira:staging']
+    resources:
+      requests:
+        cpu: 500m
+        memory: 1Gi
+      limits:
+        cpu: 1
+        memory: 2Gi
     env:
       BRAINTRUST_PARENT: project_name:sage-staging
       BRAINTRUST_PROJECT_NAME: sage-staging
