--- a/environments/cronjobs/staging_deployments.yml
+++ b/environments/cronjobs/staging_deployments.yml
@@ -1,6 +1,8 @@
 # Staging cronjob configuration
 
-cronjobs:
+defaultArch: arm64
+
+cronJobs:
   - name: jira-polling
     schedule: '* * * * *' # Run every minute
     command: ['yarn', 'poll-jira:staging']
